# em

./: .gitignore  .mise.toml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  result_2024-10-13 18:11:20.986539.csv
em/: __init__.py  libs.py  trains.py
tests/: test_estimation.py  test_k_fold_cross_validation.py
