[tool.poetry]
name = "em"
version = "0.1.0"
description = ""
authors = ["Jeongseop Lim <jseoplim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.5"
mypy = "^1.11.2"
pytest = "^8.3.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

plugins = ["numpy.typing.mypy_plugin"]

[tool.ruff]
line-length = 88
target-version = "py311"
